--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
+    "events": "^3.0.0",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "mongoose": "^5.2.4",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "request": "^2.87.0"
   },
   "devDependencies": {
     "cheerio": "^1.0.0-rc.2",
